crates/slate/tests/snapshots/function_pointers.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn add_pair(arg5: i32, arg6: i32) -> i32 {
    let mut lhs: i32 = 0;
    let mut rhs: i32 = 0;
    let mut __retval: i32 = 0;
    lhs = arg5;
    rhs = arg6;
    let _v0: i32 = lhs;
    let _v1: i32 = rhs;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn apply_binary(arg2: Option<unsafe extern "C" fn(i32, i32) -> i32>, arg3: i32, arg4: i32) -> i32 {
    let mut op: Option<unsafe extern "C" fn(i32, i32) -> i32> = None;
    let mut lhs: i32 = 0;
    let mut rhs: i32 = 0;
    let mut __retval: i32 = 0;
    op = arg2;
    lhs = arg3;
    rhs = arg4;
    let _v0: Option<unsafe extern "C" fn(i32, i32) -> i32> = op;
    let _v1: i32 = lhs;
    let _v2: i32 = rhs;
    let _v3: i32 = unsafe { _v0.unwrap()(_v1, _v2) };
    __retval = _v3;
    let _v4: i32 = __retval;
    return _v4;
}

extern "C" fn mul_pair(arg0: i32, arg1: i32) -> i32 {
    let mut lhs: i32 = 0;
    let mut rhs: i32 = 0;
    let mut __retval: i32 = 0;
    lhs = arg0;
    rhs = arg1;
    let _v0: i32 = lhs;
    let _v1: i32 = rhs;
    let _v2: i32 = _v0 * _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut chosen: Option<unsafe extern "C" fn(i32, i32) -> i32> = None;
    let _v0: i32 = 0;
    __retval = _v0;
    chosen = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32, i32) -> i32>>(add_pair as *const ()) };
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: Option<unsafe extern "C" fn(i32, i32) -> i32> = chosen;
    let _v3: i32 = 4;
    let _v4: i32 = 5;
    let _v5: i32 = apply_binary(_v2, _v3, _v4);
    let _v6: i32 = unsafe { printf(_v1 as *const i8, _v5) };
    chosen = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32, i32) -> i32>>(mul_pair as *const ()) };
    let _v7: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v8: Option<unsafe extern "C" fn(i32, i32) -> i32> = chosen;
    let _v9: i32 = 3;
    let _v10: i32 = 6;
    let _v11: i32 = unsafe { _v8.unwrap()(_v9, _v10) };
    let _v12: i32 = unsafe { printf(_v7 as *const i8, _v11) };
    let _v13: i32 = 0;
    __retval = _v13;
    let _v14: i32 = __retval;
    std::process::exit(_v14 as i32);
}
