crates/slate/tests/snapshots/function_prototypes.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn is_even(arg2: i32) -> i32 {
    let mut n: i32 = 0;
    let mut __retval: i32 = 0;
    n = arg2;
    {
        let _v0: i32 = n;
        let _v1: i32 = 0;
        let _v2: bool = _v0 == _v1;
        if _v2 {
            let _v3: i32 = 1;
            __retval = _v3;
            let _v4: i32 = __retval;
            return _v4;
        }
    }
    let _v5: i32 = n;
    let _v6: i32 = 1;
    let _v7: i32 = _v5 - _v6;
    let _v8: i32 = is_odd(_v7);
    __retval = _v8;
    let _v9: i32 = __retval;
    return _v9;
}

fn is_odd(arg1: i32) -> i32 {
    let mut n: i32 = 0;
    let mut __retval: i32 = 0;
    n = arg1;
    {
        let _v0: i32 = n;
        let _v1: i32 = 0;
        let _v2: bool = _v0 == _v1;
        if _v2 {
            let _v3: i32 = 0;
            __retval = _v3;
            let _v4: i32 = __retval;
            return _v4;
        }
    }
    let _v5: i32 = n;
    let _v6: i32 = 1;
    let _v7: i32 = _v5 - _v6;
    let _v8: i32 = is_even(_v7);
    __retval = _v8;
    let _v9: i32 = __retval;
    return _v9;
}

fn square(arg0: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg0;
    let _v0: i32 = x;
    let _v1: i32 = x;
    let _v2: i32 = _v0 * _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 7;
    let _v3: i32 = is_odd(_v2);
    let _v4: i32 = 10;
    let _v5: i32 = is_even(_v4);
    let _v6: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5) };
    let _v7: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v8: i32 = 5;
    let _v9: i32 = square(_v8);
    let _v10: i32 = unsafe { printf(_v7 as *const i8, _v9) };
    let _v11: i32 = 0;
    __retval = _v11;
    let _v12: i32 = __retval;
    std::process::exit(_v12 as i32);
}
