crates/slate/tests/snapshots/function_typedef_pointer_return_struct.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Callback {
    handler: Option<unsafe extern "C" fn(*mut i32) -> *mut i32>,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn add_one(arg0: *mut i32) -> *mut i32 {
    let mut value: *mut i32 = std::ptr::null_mut();
    let mut __retval: *mut i32 = std::ptr::null_mut();
    value = arg0;
    let _v0: i32 = 1;
    let _v1: *mut i32 = value;
    let _v2: i32 = unsafe { *_v1 };
    let _v3: i32 = _v2 + _v0;
    unsafe {
        *_v1 = _v3;
    }
    let _v4: *mut i32 = value;
    __retval = _v4;
    let _v5: *mut i32 = __retval;
    return _v5;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut value: i32 = 0;
    let mut callback: Callback = Callback { handler: None };
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 41;
    value = _v1;
    callback = Callback { handler: None };
    callback.handler = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(*mut i32) -> *mut i32>>(add_one as *const ()) };
    let _v2: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v3: Option<unsafe extern "C" fn(*mut i32) -> *mut i32> = callback.handler;
    let _v4: *mut i32 = unsafe { _v3.unwrap()(std::ptr::addr_of_mut!(value)) };
    let _v5: i32 = unsafe { *_v4 };
    let _v6: i32 = unsafe { printf(_v2 as *const i8, _v5) };
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
