crates/slate/tests/snapshots/global_bool.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

static mut disabled: bool = false;

static mut enabled: bool = true;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v2: bool = unsafe { enabled };
    let _v3: i32 = _v2 as i32;
    let _v4: bool = unsafe { disabled };
    let _v5: i32 = _v4 as i32;
    let _v6: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5) };
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
