crates/slate/tests/snapshots/global_string_pointer_array.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

static mut names: aligned::Aligned<aligned::A16, [*mut i8; 2]> = aligned::Aligned([b"alpha\0".as_ptr() as *mut i8, b"beta\0".as_ptr() as *mut i8]);

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%s %s\n\0".as_ptr() as *mut i8;
    let _v2: i64 = 0;
    let _v3: *mut i8 = unsafe { (*names)[(_v2 as usize)] };
    let _v4: i64 = 1;
    let _v5: *mut i8 = unsafe { (*names)[(_v4 as usize)] };
    let _v6: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5) };
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
