crates/slate/tests/snapshots/global_vars.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Pair {
    left: i32,
    right: i32,
}


static mut counter: i32 = 4;

static mut numbers: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([1, 2, 0, 0]);

static mut pair: Pair = Pair { left: 3, right: 5 };

static mut zeroed: i32 = 0;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn adjust(arg0: i32) -> i32 {
    let mut by: i32 = 0;
    let mut __retval: i32 = 0;
    by = arg0;
    let _v0: i32 = by;
    let _v1: i32 = unsafe { counter };
    let _v2: i32 = _v1 + _v0;
    unsafe {
        counter = _v2;
    }
    let _v3: i32 = unsafe { counter };
    let _v4: i32 = unsafe { zeroed };
    let _v5: i32 = _v4 + _v3;
    unsafe {
        zeroed = _v5;
    }
    let _v6: i32 = unsafe { zeroed };
    let _v7: i64 = 0;
    let _v8: i32 = unsafe { (*numbers)[(_v7 as usize)] };
    let _v9: i32 = _v6 - _v8;
    let _v10: i64 = 2;
    unsafe {
        (*numbers)[(_v10 as usize)] = _v9;
    }
    let _v11: i64 = 1;
    let _v12: i32 = unsafe { (*numbers)[(_v11 as usize)] };
    let _v13: i32 = unsafe { pair.right };
    let _v14: i32 = _v13 + _v12;
    unsafe {
        pair.right = _v14;
    }
    let _v15: i32 = unsafe { pair.left };
    let _v16: i32 = unsafe { pair.right };
    let _v17: i32 = _v15 + _v16;
    __retval = _v17;
    let _v18: i32 = __retval;
    return _v18;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 6;
    let _v3: i32 = adjust(_v2);
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v3) };
    let _v5: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = unsafe { counter };
    let _v7: i32 = unsafe { zeroed };
    let _v8: i64 = 2;
    let _v9: i32 = unsafe { (*numbers)[(_v8 as usize)] };
    let _v10: i32 = unsafe { printf(_v5 as *const i8, _v6, _v7, _v9) };
    let _v11: i32 = 0;
    __retval = _v11;
    let _v12: i32 = __retval;
    std::process::exit(_v12 as i32);
}
