crates/slate/tests/snapshots/gnu_asm_goto.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(asm_goto_with_outputs)]
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn gnu_asm_goto(arg1: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                value = arg1;
                let _v0: i32 = value;
                unsafe {
                    core::arch::asm!("testl {0:e}, {0:e}\n\tjz {1}", in(reg) _v0, label {
                        __state0 = 1;
                        continue '__dispatch0;
                    }, options(att_syntax));
                }
                let _v1: i32 = 11;
                __retval = _v1;
                let _v2: i32 = __retval;
                return _v2;
            }
            1 => {
                let _v3: i32 = 13;
                __retval = _v3;
                let _v4: i32 = __retval;
                return _v4;
            }
            _ => {
                unreachable!();
            }
        }
    }
}

fn gnu_asm_goto_output(arg0: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    let mut output: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                value = arg0;
                let _v0: i32 = value;
                output = _v0;
                let _v1: i32 = output;
                unsafe {
                    core::arch::asm!("testl {0:e}, {0:e}\n\tjz {1}", inlateout(reg) _v1 => output, label {
                        __state0 = 1;
                        continue '__dispatch0;
                    }, options(att_syntax));
                }
                output = output;
                let _v2: i32 = output;
                let _v3: i32 = 1;
                let _v4: i32 = _v2 + _v3;
                __retval = _v4;
                let _v5: i32 = __retval;
                return _v5;
            }
            1 => {
                let _v6: i32 = output;
                let _v7: i32 = 2;
                let _v8: i32 = _v6 + _v7;
                __retval = _v8;
                let _v9: i32 = __retval;
                return _v9;
            }
            _ => {
                unreachable!();
            }
        }
    }
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 0;
    let _v3: i32 = gnu_asm_goto(_v2);
    let _v4: i32 = 5;
    let _v5: i32 = gnu_asm_goto_output(_v4);
    let _v6: i32 = 0;
    let _v7: i32 = gnu_asm_goto_output(_v6);
    let _v8: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
