crates/slate/tests/snapshots/gnu_builtin_debugtrap.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(abi_unadjusted)]
#![feature(link_llvm_intrinsics)]
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

static mut debugtrap_never: i32 = 0;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    {
        let _v1: i32 = unsafe { std::ptr::read_volatile(std::ptr::addr_of!(debugtrap_never)) };
        let _v2: bool = _v1 != 0;
        if _v2 {
            unsafe {
                unsafe { __slate_intrinsic_debugtrap_2b8d277b395439e1() };
            }
        }
    }
    let _v3: *mut i8 = b"ok\n\0".as_ptr() as *mut i8;
    let _v4: i32 = unsafe { printf(_v3 as *const i8) };
    let _v5: i32 = 0;
    __retval = _v5;
    let _v6: i32 = __retval;
    std::process::exit(_v6 as i32);
}

unsafe extern "unadjusted" {
    #[link_name = "llvm.debugtrap"]
    fn __slate_intrinsic_debugtrap_2b8d277b395439e1();
}
