crates/slate/tests/snapshots/gnu_builtin_return_address.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn address_probe() -> i32 {
    let mut __retval: i32 = 0;
    let mut return_address: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut frame_address: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v0: u32 = 0;
    let _v1: *mut core::ffi::c_void = 1usize as *mut core::ffi::c_void;
    return_address = _v1;
    let _v2: u32 = 0;
    let _v3: *mut u8 = 1usize as *mut u8;
    let _v4: *mut core::ffi::c_void = _v3 as *mut core::ffi::c_void;
    frame_address = _v4;
    let _v5: *mut core::ffi::c_void = return_address;
    let _v6: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v7: bool = _v5 != _v6;
    let _v8: i32 = _v7 as i32;
    let _v9: *mut core::ffi::c_void = frame_address;
    let _v10: *mut core::ffi::c_void = std::ptr::null_mut();
    let _v11: bool = _v9 != _v10;
    let _v12: i32 = _v11 as i32;
    let _v13: i32 = _v8 + _v12;
    __retval = _v13;
    let _v14: i32 = __retval;
    return _v14;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = address_probe();
    let _v3: i32 = unsafe { printf(_v1 as *const i8, _v2) };
    let _v4: i32 = 0;
    __retval = _v4;
    let _v5: i32 = __retval;
    std::process::exit(_v5 as i32);
}
