crates/slate/tests/snapshots/gnu_case_ranges.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn classify(arg1: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    let mut result: i32 = 0;
    value = arg1;
    let _v0: i32 = 0;
    result = _v0;
    {
        let _v1: i32 = value;
        {
            let __switch_value0 = _v1;
            let mut __switch_case0: i32 = match __switch_value0 { 1..=4 => 0, 5..=8 => 1, 10..=12 => 2, _ => 3 };
            '__switch0: loop {
                match __switch_case0 {
                    0 => {
                        let _v2: i32 = 10;
                        let _v3: i32 = result;
                        let _v4: i32 = _v3 + _v2;
                        result = _v4;
                        __switch_case0 = 1;
                        continue '__switch0;
                    }
                    1 => {
                        let _v5: i32 = 20;
                        let _v6: i32 = result;
                        let _v7: i32 = _v6 + _v5;
                        result = _v7;
                        break '__switch0;
                    }
                    2 => {
                        let _v8: i32 = 40;
                        let _v9: i32 = result;
                        let _v10: i32 = _v9 + _v8;
                        result = _v10;
                        break '__switch0;
                    }
                    3 => {
                        let _v11: i32 = 90;
                        result = _v11;
                        break '__switch0;
                    }
                    _ => {
                        break '__switch0;
                    }
                }
            }
        }
    }
    let _v12: i32 = result;
    __retval = _v12;
    let _v13: i32 = __retval;
    return _v13;
}

fn classify_direct(arg0: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    value = arg0;
    {
        let _v0: i32 = value;
        {
            let __switch_value0 = _v0;
            let mut __switch_case0: i32 = match __switch_value0 { -2..=2 => 0, _ => 1 };
            '__switch0: loop {
                match __switch_case0 {
                    0 => {
                        let _v1: i32 = 7;
                        __retval = _v1;
                        let _v2: i32 = __retval;
                        return _v2;
                    }
                    1 => {
                        let _v3: i32 = 9;
                        __retval = _v3;
                        let _v4: i32 = __retval;
                        return _v4;
                    }
                    _ => {
                        break '__switch0;
                    }
                }
            }
        }
    }
    let _v5: i32 = __retval;
    return _v5;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d %d %d %d %d %d %d %d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 1;
    let _v3: i32 = classify(_v2);
    let _v4: i32 = 2;
    let _v5: i32 = classify(_v4);
    let _v6: i32 = 4;
    let _v7: i32 = classify(_v6);
    let _v8: i32 = 5;
    let _v9: i32 = classify(_v8);
    let _v10: i32 = 7;
    let _v11: i32 = classify(_v10);
    let _v12: i32 = 8;
    let _v13: i32 = classify(_v12);
    let _v14: i32 = 9;
    let _v15: i32 = classify(_v14);
    let _v16: i32 = 10;
    let _v17: i32 = classify(_v16);
    let _v18: i32 = 11;
    let _v19: i32 = classify(_v18);
    let _v20: i32 = 12;
    let _v21: i32 = classify(_v20);
    let _v22: i32 = -1;
    let _v23: i32 = classify_direct(_v22);
    let _v24: i32 = 3;
    let _v25: i32 = classify_direct(_v24);
    let _v26: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5, _v7, _v9, _v11, _v13, _v15, _v17, _v19, _v21, _v23, _v25) };
    let _v27: i32 = 0;
    __retval = _v27;
    let _v28: i32 = __retval;
    std::process::exit(_v28 as i32);
}
