crates/slate/tests/snapshots/gnu_empty_struct.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct GNUEmpty {
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn empty_size() -> u64 {
    let mut value: GNUEmpty = GNUEmpty {  };
    let mut __retval: u64 = 0;
    unsafe { std::ptr::copy(__const.empty_size.value, std::ptr::addr_of_mut!(value), 1) };
    let _v0: u64 = 0;
    __retval = _v0;
    let _v1: u64 = __retval;
    return _v1;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut value: GNUEmpty = GNUEmpty {  };
    let _v0: i32 = std::mem::size_of::<GNUEmpty>() as i32;
    __retval = _v0;
    let _v1: *mut i8 = b"%zu %zu\n\0".as_ptr() as *mut i8;
    let _v2: u64 = 0;
    let _v3: GNUEmpty = value;
    let _v4: u64 = empty_size();
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v2, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
